# owen_market_data_tech_test

./: .gitignore  .pre-commit-config.yaml  PERFORMANCE_ANALYSIS.md  README.md  README_INTRO.md  main.py  pyproject.toml  requirements.txt
app/api/: routes.py
app/models/: schemas.py
app/services/: analytics.py  data_loader.py
data/: market_data.json  property_data.json
