[project]
name = "cre-analytics-api"
version = "1.0.0"
description = "Commercial Real Estate Analytics API"
requires-python = ">=3.8"

[tool.ruff]
# Set the maximum line length
line-length = 100

# Assume Python 3.8+
target-version = "py38"

# Enable specific rule sets
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore specific rules
lint.ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Allow function calls in argument defaults (needed for FastAPI Depends/Query)
]

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py files

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
